--- a/styleprojetojavascript.css
+++ b/styleprojetojavascript.css
@@ -83,7 +83,5 @@ footer {
   background-color: #333;
   color: white;
   padding: 20px;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
+  margin-top: auto; 
 }
